--- a/requirements.txt
+++ b/requirements.txt
@@ -29,7 +29,7 @@ cffi==1.16.0
 chardet==5.2.0
 charset-normalizer==3.3.2
 click==8.1.7
-cloudpathlib==0.16.0
+cloudpathlib==0.18.1
 cmake==3.29.2
 colorama==0.4.6
 coloredlogs==15.0.1
@@ -49,7 +49,7 @@ dnspython==2.5.0
 docker-pycreds==0.4.0
 docopt==0.6.2
 docstring_parser==0.16
-docutils==0.16
+docutils==0.21.2
 ecdsa==0.18.0
 Electrum==4.5.4
 evaluate==0.4.2
@@ -67,7 +67,7 @@ hidapi==0.14.0
 html2text==2020.1.16
 html5-parser==0.4.12
 html5lib==1.1
-huggingface-hub==0.22.2
+huggingface-hub==0.23.0
 humanfriendly==10.0
 hydra-core==1.3.2
 idna==3.6
@@ -78,7 +78,7 @@ inflate64==1.0.0
 jeepney==0.8.0
 Jinja2==3.1.3
 jmespath==1.0.1
-joblib==1.4.0
+joblib==1.4.2
 jsonpatch==1.33
 jsonpointer==2.4
 jsonrpclib-pelix==0.4.3.2
@@ -90,7 +90,7 @@ lensfun==0.3.4
 libfdt==1.7.0
 libtorrent==2.0.10
 lightning-utilities==0.11.2
-lit==17.0.6.dev0
+lit==18.1.4
 lxml==5.1.0
 marisa-trie==1.1.0
 Markdown==3.6
@@ -113,18 +113,18 @@ nftables==0.1
 nltk==3.8.1
 npyscreen==4.10.5
 numpy==2.0.0rc1
-nvidia-cublas-cu12==12.1.3.1
-nvidia-cuda-cupti-cu12==12.1.105
-nvidia-cuda-nvrtc-cu12==12.1.105
-nvidia-cuda-runtime-cu12==12.1.105
-nvidia-cudnn-cu12==8.9.2.26
-nvidia-cufft-cu12==11.0.2.54
-nvidia-curand-cu12==10.3.2.106
-nvidia-cusolver-cu12==11.4.5.107
-nvidia-cusparse-cu12==12.1.0.106
-nvidia-nccl-cu12==2.20.5
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-nccl-cu12==2.21.5
 nvidia-nvjitlink-cu12==12.4.127
-nvidia-nvtx-cu12==12.1.105
+nvidia-nvtx-cu12==12.4.127
 omegaconf==2.3.0
 optimum==1.19.1
 packaging==23.2
@@ -134,14 +134,14 @@ pbkdf2==1.3
 pdftotext==2.2.2
 peft==0.10.0
 pillow==10.3.0
-pinecone-client==3.2.2
+pinecone-client==4.0.0
 pip-review==1.3.0
 platformdirs==4.2.1
 plumbum==1.8.2
 ply==3.11
 preshed==3.0.9
 prettytable==3.10.0
-protobuf==4.25.3
+protobuf==5.27.0rc1
 psutil==5.9.8
 py7zr==0.21.0
 pyaes==1.6.1
@@ -176,7 +176,7 @@ PySocks==1.7.1
 python-dateutil==2.9.0
 python-dotenv==1.0.1
 python-socks==2.4.4
-pytorch-lightning==2.2.3
+pytorch-lightning==2.2.4
 pytorch-triton==0.0.1
 pytz==2024.1
 pyxdg==0.28
@@ -191,7 +191,7 @@ requests==2.31.0
 responses==0.25.0
 rich==13.7.1
 rpyc==6.0.0
-rsa==4.7.2
+rsa==4.9
 s3transfer==0.10.1
 safetensors==0.4.3
 scikit-learn==1.4.2
@@ -207,7 +207,7 @@ shiboken6-generator==6.7.0
 shtab==1.7.1
 six==1.16.0
 small-text==1.3.3
-smart-open==6.4.0
+smart-open==7.0.4
 smbus==1.1
 smmap==5.0.1
 snowballstemmer==2.2.0
@@ -237,7 +237,7 @@ tqdm==4.66.4
 transformers==4.40.1
 triton==2.3.0
 trl==0.8.6
-typer==0.9.4
+typer==0.12.3
 typer-cli==0.12.3
 typer-slim==0.12.3
 typing_extensions==4.11.0
@@ -250,7 +250,7 @@ vboxapi==1.0
 wandb==0.17.0rc2
 wasabi==1.1.2
 wcwidth==0.2.13
-weasel==0.3.4
+weasel==0.4.0
 webencodings==0.5.1
 websocket-client==1.8.0
 wheel==0.43.0
