--- a/requirements.txt
+++ b/requirements.txt
@@ -36,7 +36,7 @@ coloredlogs==15.0.1
 confection==0.1.5a0
 contourpy==1.2.1
 coverage==7.5.1
-cryptography==42.0.5
+cryptography==42.0.6
 css-parser==1.0.10
 cssselect==1.2.0
 cupshelpers==1.0
@@ -45,12 +45,12 @@ cymem==2.0.8
 datasets==2.19.0
 dbus-python==1.3.2
 dill==0.3.8
-dnspython==2.5.0
+dnspython==2.6.1
 docker-pycreds==0.4.0
 docopt==0.6.2
 docstring_parser==0.16
 docutils==0.21.2
-ecdsa==0.18.0
+ecdsa==0.19.0
 Electrum==4.5.4
 evaluate==0.4.2
 faust-cchardet==2.1.19
@@ -64,16 +64,16 @@ gitdb==4.0.11
 GitPython==3.1.43
 helpdev==0.7.1
 hidapi==0.14.0
-html2text==2020.1.16
+html2text==2024.2.26
 html5-parser==0.4.12
 html5lib==1.1
 huggingface-hub==0.23.0
 humanfriendly==10.0
 hydra-core==1.3.2
-idna==3.6
+idna==3.7
 ifaddr==0.2.0
 imagesize==1.4.1
-importlib_metadata==5.1.0
+importlib_metadata==7.1.0
 inflate64==1.0.0
 jeepney==0.8.0
 Jinja2==3.1.3
@@ -91,17 +91,17 @@ libfdt==1.7.0
 libtorrent==2.0.10
 lightning-utilities==0.11.2
 lit==18.1.4
-lxml==5.1.0
+lxml==5.2.1
 marisa-trie==1.1.0
 Markdown==3.6
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
-matplotlib==3.8.3
+matplotlib==3.9.0rc2
 mccabe==0.7.0
 mdurl==0.1.2
 mechanize==0.4.10
 mpmath==1.4.0a1
-msgpack==1.0.5
+msgpack==1.0.8
 multidict==6.0.5
 multiprocess==0.70.16
 multivolumefile==0.2.3
@@ -125,9 +125,9 @@ nvidia-cusparse-cu12==12.3.1.170
 nvidia-nccl-cu12==2.21.5
 nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.4.127
-omegaconf==2.3.0
+omegaconf==2.4.0.dev3
 optimum==1.19.1
-packaging==23.2
+packaging==24.0
 pacman_mirrors==4.24.0
 pandas==2.2.2
 pbkdf2==1.3
@@ -137,7 +137,7 @@ pillow==10.3.0
 pinecone-client==4.0.0
 pip-review==1.3.0
 platformdirs==4.2.1
-plumbum==1.8.2
+plumbum==1.8.3
 ply==3.11
 preshed==3.0.9
 prettytable==3.10.0
@@ -154,9 +154,9 @@ pychm==0.8.6
 pycodestyle==2.11.1
 pycparser==2.22
 pycryptodome==3.20.0
-pycryptodomex==3.12.0
+pycryptodomex==3.20.0
 pycups==2.0.4
-pycurl==7.45.2
+pycurl==7.45.3
 pydantic==2.7.1
 pydantic_core==2.18.2
 pyflakes==3.2.0
@@ -173,7 +173,7 @@ PyQt6_sip==13.6.0
 PySide6==6.7.0
 pysmbc==1.0.25.1
 PySocks==1.7.1
-python-dateutil==2.9.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-socks==2.4.4
 pytorch-lightning==2.2.4
@@ -185,8 +185,8 @@ pyzstd==0.15.10
 QDarkStyle==3.2.3
 qrcode==7.4.2
 QtPy==2.4.1
-regex==2024.4.16
-reportlab==4.1.0
+regex==2024.4.28
+reportlab==4.2.0
 requests==2.31.0
 responses==0.25.0
 rich==13.7.1
@@ -208,7 +208,7 @@ shtab==1.7.1
 six==1.16.0
 small-text==1.3.3
 smart-open==7.0.4
-smbus==1.1
+smbus==1.1.post2
 smmap==5.0.1
 snowballstemmer==2.2.0
 soupsieve==2.5
