--- a/requirements.txt
+++ b/requirements.txt
@@ -12,17 +12,17 @@ application-utility==1.3.2
 apsw==3.45.3.0
 async-timeout==4.0.3
 attrs==23.2.1.dev0
-awscli==1.32.98
-Babel==2.14.0
+awscli==1.32.101
+Babel==2.15.0
 beautifulsoup4==4.13.0b2
 bitarray==2.9.2
 bitstring==4.2.1
 blis==0.7.11
-botocore==1.34.98
+botocore==1.34.101
 Brotli==1.1.0
 brotlicffi==1.1.0.0
 btchip-python==0.1.32
-btrfsutil==6.8
+btrfsutil==6.8.1
 catalogue==2.0.10
 certifi==2024.2.2
 cffi==1.16.0
@@ -36,13 +36,13 @@ coloredlogs==15.0.1
 confection==0.1.5a0
 contourpy==1.2.1
 coverage==7.5.1
-cryptography==42.0.6
+cryptography==42.0.7
 css-parser==1.0.10
 cssselect==1.2.0
 cupshelpers==1.0
 cycler==0.12.1
 cymem==2.0.8
-datasets==2.19.0
+datasets==2.19.1
 dbus-python==1.3.2
 dill==0.3.8
 dnspython==2.6.1
@@ -76,7 +76,7 @@ imagesize==1.4.1
 importlib_metadata==7.1.0
 inflate64==1.0.0
 jeepney==0.8.0
-Jinja2==3.1.3
+Jinja2==3.1.4
 jmespath==1.0.1
 joblib==1.4.2
 jsonpatch==1.33
@@ -92,7 +92,7 @@ libtorrent==2.0.10
 lightning-utilities==0.11.2
 lit==18.1.4
 lxml==5.2.1
-marisa-trie==1.1.0
+marisa-trie==1.1.1
 Markdown==3.6
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
@@ -113,20 +113,20 @@ nftables==0.1
 nltk==3.8.1
 npyscreen==4.10.5
 numpy==2.0.0rc1
-nvidia-cublas-cu12==12.4.5.8
-nvidia-cuda-cupti-cu12==12.4.127
-nvidia-cuda-nvrtc-cu12==12.4.127
-nvidia-cuda-runtime-cu12==12.4.127
-nvidia-cudnn-cu12==9.1.0.70
-nvidia-cufft-cu12==11.2.1.3
-nvidia-curand-cu12==10.3.5.147
-nvidia-cusolver-cu12==11.6.1.9
-nvidia-cusparse-cu12==12.3.1.170
-nvidia-nccl-cu12==2.21.5
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.20.5
 nvidia-nvjitlink-cu12==12.4.127
-nvidia-nvtx-cu12==12.4.127
+nvidia-nvtx-cu12==12.1.105
 omegaconf==2.4.0.dev3
-optimum==1.19.1
+optimum==1.19.2
 packaging==24.0
 pacman_mirrors==4.24.0
 pandas==2.2.2
@@ -140,8 +140,9 @@ platformdirs==4.2.1
 plumbum==1.8.3
 ply==3.11
 preshed==3.0.9
+pretty-errors==1.2.25
 prettytable==3.10.0
-protobuf==5.27.0rc1
+protobuf==5.26.1
 psutil==5.9.8
 py7zr==0.21.0
 pyaes==1.6.1
@@ -197,7 +198,7 @@ safetensors==0.4.3
 scikit-learn==1.4.2
 scipy==1.13.0
 sentencepiece==0.2.0
-sentry-sdk==2.0.1
+sentry-sdk==2.1.1
 setproctitle==1.3.3
 setuptools==69.5.1
 sgmllib3k==1.0.0
@@ -209,7 +210,7 @@ six==1.16.0
 small-text==1.3.3
 smart-open==7.0.4
 smbus==1.1.post2
-smmap==6.0.0
+smmap==5.0.1
 snowballstemmer==2.2.0
 soupsieve==2.5
 spacy==4.0.0.dev3
@@ -231,10 +232,10 @@ threadpoolctl==3.5.0
 tokenizers==0.19.1
 torch==2.3.0
 torch-nested==0.0.5
-torchmetrics==1.3.2
+torchmetrics==1.4.0
 torchvision==0.18.0
 tqdm==4.66.4
-transformers==4.40.1
+transformers==4.40.2
 triton==2.3.0
 trl==0.8.6
 typer==0.12.3
@@ -247,7 +248,7 @@ udiskie==2.5.3
 unrardll==0.1.7
 urllib3==2.2.1
 vboxapi==1.0
-wandb==0.17.0rc2
+wandb==0.17.0
 wasabi==1.1.2
 wcwidth==0.2.13
 weasel==0.4.0
