--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-accelerate==0.30.0
+accelerate==0.30.1
 aiohttp==3.9.3
 aiohttp_socks==0.8.4
 aiorpcX==0.23.1
@@ -12,13 +12,13 @@ application-utility==1.3.2
 apsw==3.45.3.0
 async-timeout==4.0.3
 attrs==23.2.1.dev0
-awscli==1.32.101
+awscli==1.32.106
 Babel==2.15.0
 beautifulsoup4==4.13.0b2
 bitarray==2.9.2
-bitstring==4.2.1
+bitstring==4.2.2
 blis==0.7.11
-botocore==1.34.101
+botocore==1.34.106
 Brotli==1.1.0
 brotlicffi==1.1.0.0
 btchip-python==0.1.32
@@ -30,7 +30,7 @@ chardet==5.2.0
 charset-normalizer==3.3.2
 click==8.1.7
 cloudpathlib==0.18.1
-cmake==3.29.2
+cmake==3.29.3
 colorama==0.4.6
 coloredlogs==15.0.1
 confection==0.1.5a0
@@ -49,7 +49,7 @@ dnspython==2.6.1
 docker-pycreds==0.4.0
 docopt==0.6.2
 docstring_parser==0.16
-docutils==0.21.2
+docutils==0.16
 ecdsa==0.19.0
 Electrum==4.5.4
 evaluate==0.4.2
@@ -59,7 +59,7 @@ filelock==3.14.0
 flake8==7.0.0
 fonttools==4.51.0
 frozenlist==1.4.1
-fsspec==2024.3.1
+fsspec==2024.5.0
 gitdb==4.0.11
 GitPython==3.1.43
 helpdev==0.7.1
@@ -91,7 +91,7 @@ libfdt==1.7.0
 libtorrent==2.0.10
 lightning-utilities==0.11.2
 lit==18.1.4
-lxml==5.2.1
+lxml==5.2.2
 marisa-trie==1.1.1
 Markdown==3.6
 markdown-it-py==3.0.0
@@ -134,9 +134,9 @@ pbkdf2==1.3
 pdftotext==2.2.2
 peft==0.10.0
 pillow==10.3.0
-pinecone-client==4.0.0
+pinecone-client==4.1.0
 pip-review==1.3.0
-platformdirs==4.2.1
+platformdirs==4.2.2
 plumbum==1.8.3
 ply==3.11
 preshed==3.0.9
@@ -146,7 +146,7 @@ protobuf==5.26.1
 psutil==5.9.8
 py7zr==0.21.0
 pyaes==1.6.1
-pyarrow==16.0.0
+pyarrow==16.1.0
 pyarrow-hotfix==0.6
 pyasn1==0.6.0
 pybcj==1.0.2
@@ -186,16 +186,16 @@ pyzstd==0.15.10
 QDarkStyle==3.2.3
 qrcode==7.4.2
 QtPy==2.4.1
-regex==2024.4.28
+regex==2024.5.15
 reportlab==4.2.0
 requests==2.31.0
 responses==0.25.0
 rich==13.7.1
 rpyc==6.0.0
-rsa==4.9
+rsa==4.7.2
 s3transfer==0.10.1
 safetensors==0.4.3
-scikit-learn==1.4.2
+scikit-learn==1.5.0rc1
 scipy==1.13.0
 sentencepiece==0.2.0
 sentry-sdk==2.1.1
@@ -210,7 +210,7 @@ six==1.16.0
 small-text==1.3.3
 smart-open==7.0.4
 smbus==1.1.post2
-smmap==5.0.1
+smmap==6.0.0
 snowballstemmer==2.2.0
 soupsieve==2.5
 spacy==4.0.0.dev3
@@ -232,7 +232,7 @@ threadpoolctl==3.5.0
 tokenizers==0.19.1
 torch==2.3.0
 torch-nested==0.0.5
-torchmetrics==1.4.0
+torchmetrics==1.4.0.post0
 torchvision==0.18.0
 tqdm==4.66.4
 transformers==4.40.2
@@ -242,7 +242,7 @@ typer==0.12.3
 typer-cli==0.12.3
 typer-slim==0.12.3
 typing_extensions==4.11.0
-tyro==0.8.3
+tyro==0.8.4
 tzdata==2024.1
 udiskie==2.5.3
 unrardll==0.1.7
@@ -251,7 +251,7 @@ vboxapi==1.0
 wandb==0.17.0
 wasabi==1.1.2
 wcwidth==0.2.13
-weasel==0.4.0
+weasel==0.4.1
 webencodings==0.5.1
 websocket-client==1.8.0
 wheel==0.43.0
