--- a/requirements.txt
+++ b/requirements.txt
@@ -5,20 +5,20 @@ aiorpcX==0.23.1
 aiosignal==1.3.1
 alabaster==0.7.16
 alipy==1.2.5
-annotated-types==0.6.0
+annotated-types==0.7.0
 antlr4-python3-runtime==4.13.1
 appdirs==1.4.4
 application-utility==1.3.2
 apsw==3.45.3.0
 async-timeout==4.0.3
 attrs==23.2.1.dev0
-awscli==1.32.106
+awscli==1.32.110
 Babel==2.15.0
 beautifulsoup4==4.13.0b2
 bitarray==2.9.2
 bitstring==4.2.2
-blis==0.7.11
-botocore==1.34.108
+blis==0.9.1
+botocore==1.34.110
 Brotli==1.1.0
 brotlicffi==1.1.0.0
 btchip-python==0.1.32
@@ -49,7 +49,7 @@ dnspython==2.6.1
 docker-pycreds==0.4.0
 docopt==0.6.2
 docstring_parser==0.16
-docutils==0.21.2
+docutils==0.16
 ecdsa==0.19.0
 Electrum==4.5.4
 evaluate==0.4.2
@@ -67,7 +67,7 @@ hidapi==0.14.0
 html2text==2024.2.26
 html5-parser==0.4.12
 html5lib==1.1
-huggingface-hub==0.23.0
+huggingface-hub==0.23.1
 humanfriendly==10.0
 hydra-core==1.3.2
 idna==3.7
@@ -113,18 +113,18 @@ nftables==0.1
 nltk==3.8.1
 npyscreen==4.10.5
 numpy==2.0.0rc1
-nvidia-cublas-cu12==12.1.3.1
-nvidia-cuda-cupti-cu12==12.1.105
-nvidia-cuda-nvrtc-cu12==12.1.105
-nvidia-cuda-runtime-cu12==12.1.105
-nvidia-cudnn-cu12==8.9.2.26
-nvidia-cufft-cu12==11.0.2.54
-nvidia-curand-cu12==10.3.2.106
-nvidia-cusolver-cu12==11.4.5.107
-nvidia-cusparse-cu12==12.1.0.106
-nvidia-nccl-cu12==2.20.5
-nvidia-nvjitlink-cu12==12.4.127
-nvidia-nvtx-cu12==12.1.105
+nvidia-cublas-cu12==12.5.2.13
+nvidia-cuda-cupti-cu12==12.5.39
+nvidia-cuda-nvrtc-cu12==12.5.40
+nvidia-cuda-runtime-cu12==12.5.39
+nvidia-cudnn-cu12==9.1.1.17
+nvidia-cufft-cu12==11.2.3.18
+nvidia-curand-cu12==10.3.6.39
+nvidia-cusolver-cu12==11.6.2.40
+nvidia-cusparse-cu12==12.4.1.24
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.5.40
+nvidia-nvtx-cu12==12.5.39
 omegaconf==2.4.0.dev3
 optimum==1.19.2
 packaging==24.0
@@ -192,15 +192,15 @@ requests==2.31.0
 responses==0.25.0
 rich==13.7.1
 rpyc==6.0.0
-rsa==4.9
+rsa==4.7.2
 s3transfer==0.10.1
 safetensors==0.4.3
-scikit-learn==1.5.0rc1
+scikit-learn==1.5.0
 scipy==1.13.0
 sentencepiece==0.2.0
-sentry-sdk==2.2.0
+sentry-sdk==2.2.1
 setproctitle==1.3.3
-setuptools==69.5.1
+setuptools==70.0.0
 sgmllib3k==1.0.0
 shellingham==1.5.4
 shiboken6==6.7.0
