--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 accelerate==0.30.1
-aiohttp==3.9.3
+aiohttp==3.9.5
 aiohttp_socks==0.8.4
 aiorpcX==0.23.1
 aiosignal==1.3.1
@@ -12,13 +12,13 @@ application-utility==1.3.2
 apsw==3.46.0.0
 async-timeout==4.0.3
 attrs==23.2.1.dev0
-awscli==1.32.113
+awscli==1.32.114
 Babel==2.15.0
 beautifulsoup4==4.13.0b2
 bitarray==2.9.2
 bitstring==4.2.3
 blis==0.9.1
-botocore==1.34.113
+botocore==1.34.114
 Brotli==1.1.0
 brotlicffi==1.1.0.0
 btchip-python==0.1.32
@@ -35,7 +35,7 @@ colorama==0.4.6
 coloredlogs==15.0.1
 confection==0.1.5a0
 contourpy==1.2.1
-coverage==7.5.1
+coverage==7.5.3
 cryptography==42.0.7
 css-parser==1.0.10
 cssselect==1.2.0
@@ -49,7 +49,7 @@ dnspython==2.6.1
 docker-pycreds==0.4.0
 docopt==0.6.2
 docstring_parser==0.16
-docutils==0.16
+docutils==0.21.2
 ecdsa==0.19.0
 Electrum==4.5.4
 evaluate==0.4.2
@@ -57,7 +57,7 @@ faust-cchardet==2.1.19
 feedparser==6.0.11
 filelock==3.14.0
 flake8==7.0.0
-fonttools==4.51.0
+fonttools==4.52.4
 frozenlist==1.4.1
 fsspec==2024.5.0
 gitdb==4.0.11
@@ -67,7 +67,7 @@ hidapi==0.14.0
 html2text==2024.2.26
 html5-parser==0.4.12
 html5lib==1.1
-huggingface-hub==0.23.1
+huggingface-hub==0.23.2
 humanfriendly==10.0
 hydra-core==1.3.2
 idna==3.7
@@ -92,6 +92,7 @@ libtorrent==2.0.10
 lightning-utilities==0.11.2
 lit==18.1.6
 lxml==5.2.2
+lxml_html_clean==0.1.1
 marisa-trie==1.1.1
 Markdown==3.6
 markdown-it-py==3.0.0
@@ -113,18 +114,18 @@ nftables==0.1
 nltk==3.8.1
 npyscreen==4.10.5
 numpy==2.0.0rc1
-nvidia-cublas-cu12==12.1.3.1
-nvidia-cuda-cupti-cu12==12.1.105
-nvidia-cuda-nvrtc-cu12==12.1.105
-nvidia-cuda-runtime-cu12==12.1.105
-nvidia-cudnn-cu12==8.9.2.26
-nvidia-cufft-cu12==11.0.2.54
-nvidia-curand-cu12==10.3.2.106
-nvidia-cusolver-cu12==11.4.5.107
-nvidia-cusparse-cu12==12.1.0.106
-nvidia-nccl-cu12==2.20.5
+nvidia-cublas-cu12==12.5.2.13
+nvidia-cuda-cupti-cu12==12.5.39
+nvidia-cuda-nvrtc-cu12==12.5.40
+nvidia-cuda-runtime-cu12==12.5.39
+nvidia-cudnn-cu12==9.1.1.17
+nvidia-cufft-cu12==11.2.3.18
+nvidia-curand-cu12==10.3.6.39
+nvidia-cusolver-cu12==11.6.2.40
+nvidia-cusparse-cu12==12.4.1.24
+nvidia-nccl-cu12==2.21.5
 nvidia-nvjitlink-cu12==12.5.40
-nvidia-nvtx-cu12==12.1.105
+nvidia-nvtx-cu12==12.5.39
 omegaconf==2.4.0.dev3
 optimum==1.19.2
 packaging==24.0
@@ -158,8 +159,8 @@ pycryptodome==3.20.0
 pycryptodomex==3.20.0
 pycups==2.0.4
 pycurl==7.45.3
-pydantic==2.7.1
-pydantic_core==2.18.2
+pydantic==2.7.2
+pydantic_core==2.18.3
 pyflakes==3.2.0
 Pygments==2.18.0
 PyGObject==3.48.2
@@ -171,7 +172,7 @@ PyQt5_sip==12.13.0
 PyQt6==6.7.0
 PyQt6-WebEngine==6.7.0
 PyQt6_sip==13.6.0
-PySide6==6.7.0
+PySide6==6.7.1
 pysmbc==1.0.25.1
 PySocks==1.7.1
 python-dateutil==2.9.0.post0
@@ -192,7 +193,7 @@ requests==2.32.2
 responses==0.25.0
 rich==13.7.1
 rpyc==6.0.0
-rsa==4.7.2
+rsa==4.9
 s3transfer==0.10.1
 safetensors==0.4.3
 scikit-learn==1.5.0
@@ -203,8 +204,8 @@ setproctitle==1.3.3
 setuptools==70.0.0
 sgmllib3k==1.0.0
 shellingham==1.5.4
-shiboken6==6.7.0
-shiboken6-generator==6.7.0
+shiboken6==6.7.1
+shiboken6-generator==6.7.1
 shtab==1.7.1
 six==1.16.0
 small-text==1.3.3
@@ -226,6 +227,7 @@ sphinxcontrib-serializinghtml==1.1.10
 srsly==2.4.8
 sympy==1.12.1rc1
 systemd-python==235
+TBB==0.2
 texttable==1.7.0
 thinc==9.0.0
 threadpoolctl==3.5.0
@@ -236,12 +238,12 @@ torchmetrics==1.4.0.post0
 torchvision==0.18.0
 tqdm==4.66.4
 transformers==4.41.1
-triton==2.3.0
+triton==2.3.1
 trl==0.8.6
 typer==0.12.3
 typer-cli==0.12.3
 typer-slim==0.12.3
-typing_extensions==4.11.0
+typing_extensions==4.12.0
 tyro==0.8.4
 tzdata==2024.1
 udiskie==2.5.3
@@ -259,4 +261,5 @@ wrapt==1.16.0
 xxhash==3.4.1
 yarl==1.9.4
 zeroconf==0.132.2
-zipp==3.18.2
+zipp==3.19.0
+zstandard==0.22.0
