--- a/requirements.txt
+++ b/requirements.txt
@@ -12,13 +12,13 @@ application-utility==1.3.2
 apsw==3.46.0.0
 async-timeout==4.0.3
 attrs==23.2.1.dev0
-awscli==1.32.114
+awscli==1.32.117
 Babel==2.15.0
 beautifulsoup4==4.13.0b2
 bitarray==2.9.2
 bitstring==4.2.3
 blis==0.9.1
-botocore==1.34.114
+botocore==1.34.117
 Brotli==1.1.0
 brotlicffi==1.1.0.0
 btchip-python==0.1.32
@@ -33,7 +33,7 @@ cloudpathlib==0.18.1
 cmake==3.29.3
 colorama==0.4.6
 coloredlogs==15.0.1
-confection==0.1.5a0
+confection==0.1.5
 contourpy==1.2.1
 coverage==7.5.3
 cryptography==42.0.7
@@ -127,7 +127,7 @@ nvidia-nccl-cu12==2.21.5
 nvidia-nvjitlink-cu12==12.5.40
 nvidia-nvtx-cu12==12.5.39
 omegaconf==2.4.0.dev3
-optimum==1.19.2
+optimum==1.20.0
 packaging==24.0
 pacman_mirrors==4.24.0
 pandas==2.2.2
@@ -225,7 +225,7 @@ sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.7
 sphinxcontrib-serializinghtml==1.1.10
 srsly==2.4.8
-sympy==1.12.1rc1
+sympy==1.12.1
 systemd-python==235
 TBB==0.2
 texttable==1.7.0
@@ -237,7 +237,7 @@ torch-nested==0.0.5
 torchmetrics==1.4.0.post0
 torchvision==0.18.0
 tqdm==4.66.4
-transformers==4.41.1
+transformers==4.41.2
 triton==2.3.1
 trl==0.8.6
 typer==0.12.3
@@ -251,7 +251,7 @@ unrardll==0.1.7
 urllib3==2.2.1
 vboxapi==1.0
 wandb==0.17.0
-wasabi==1.1.2
+wasabi==1.1.3
 wcwidth==0.2.13
 weasel==0.4.1
 webencodings==0.5.1
@@ -261,5 +261,5 @@ wrapt==1.16.0
 xxhash==3.4.1
 yarl==1.9.4
 zeroconf==0.132.2
-zipp==3.19.0
+zipp==3.19.1
 zstandard==0.22.0
