--- a/requirements.txt
+++ b/requirements.txt
@@ -12,19 +12,19 @@ application-utility==1.3.2
 apsw==3.46.0.0
 async-timeout==4.0.3
 attrs==23.2.1.dev0
-awscli==1.32.117
+awscli==1.33.0
 Babel==2.15.0
 beautifulsoup4==4.13.0b2
 bitarray==2.9.2
 bitstring==4.2.3
 blis==0.9.1
-botocore==1.34.117
+botocore==1.34.118
 Brotli==1.1.0
 brotlicffi==1.1.0.0
 btchip-python==0.1.32
 btrfsutil==6.8.1
 catalogue==2.0.10
-certifi==2024.2.2
+certifi==2024.6.2
 cffi==1.16.0
 chardet==5.2.0
 charset-normalizer==3.3.2
@@ -42,7 +42,7 @@ cssselect==1.2.0
 cupshelpers==1.0
 cycler==0.12.1
 cymem==2.0.8
-datasets==2.19.1
+datasets==2.19.2
 dbus-python==1.3.2
 dill==0.3.8
 dnspython==2.6.1
@@ -57,7 +57,7 @@ faust-cchardet==2.1.19
 feedparser==6.0.11
 filelock==3.14.0
 flake8==7.0.0
-fonttools==4.52.4
+fonttools==4.53.0
 frozenlist==1.4.1
 fsspec==2024.5.0
 gitdb==4.0.11
@@ -159,8 +159,8 @@ pycryptodome==3.20.0
 pycryptodomex==3.20.0
 pycups==2.0.4
 pycurl==7.45.3
-pydantic==2.7.2
-pydantic_core==2.18.3
+pydantic==2.7.3
+pydantic_core==2.18.4
 pyflakes==3.2.0
 Pygments==2.18.0
 PyGObject==3.48.2
@@ -189,7 +189,7 @@ qrcode==7.4.2
 QtPy==2.4.1
 regex==2024.5.15
 reportlab==4.2.0
-requests==2.32.2
+requests==2.32.3
 responses==0.25.0
 rich==13.7.1
 rpyc==6.0.0
@@ -227,7 +227,7 @@ sphinxcontrib-serializinghtml==1.1.10
 srsly==2.4.8
 sympy==1.12.1
 systemd-python==235
-TBB==0.2
+tbb==2021.12.0
 texttable==1.7.0
 thinc==9.0.0
 threadpoolctl==3.5.0
@@ -243,7 +243,7 @@ trl==0.8.6
 typer==0.12.3
 typer-cli==0.12.3
 typer-slim==0.12.3
-typing_extensions==4.12.0
+typing_extensions==4.12.1
 tyro==0.8.4
 tzdata==2024.1
 udiskie==2.5.3
