--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-accelerate==0.30.1
+accelerate==0.31.0
 aiohttp==3.9.5
 aiohttp_socks==0.8.4
 aiorpcX==0.23.1
@@ -12,13 +12,13 @@ application-utility==1.3.2
 apsw==3.46.0.0
 async-timeout==4.0.3
 attrs==23.2.1.dev0
-awscli==1.33.0
+awscli==1.33.4
 Babel==2.15.0
 beautifulsoup4==4.13.0b2
 bitarray==2.9.2
 bitstring==4.2.3
 blis==0.9.1
-botocore==1.34.118
+botocore==1.34.122
 Brotli==1.1.0
 brotlicffi==1.1.0.0
 btchip-python==0.1.32
@@ -30,13 +30,13 @@ chardet==5.2.0
 charset-normalizer==3.3.2
 click==8.1.7
 cloudpathlib==0.18.1
-cmake==3.29.3
+cmake==3.29.5
 colorama==0.4.6
 coloredlogs==15.0.1
 confection==0.1.5
 contourpy==1.2.1
 coverage==7.5.3
-cryptography==42.0.7
+cryptography==42.0.8
 css-parser==1.0.10
 cssselect==1.2.0
 cupshelpers==1.0
@@ -59,7 +59,7 @@ filelock==3.14.0
 flake8==7.0.0
 fonttools==4.53.0
 frozenlist==1.4.1
-fsspec==2024.5.0
+fsspec==2024.6.0
 gitdb==4.0.11
 GitPython==3.1.43
 helpdev==0.7.1
@@ -67,7 +67,7 @@ hidapi==0.14.0
 html2text==2024.2.26
 html5-parser==0.4.12
 html5lib==1.1
-huggingface-hub==0.23.2
+huggingface-hub==0.23.3
 humanfriendly==10.0
 hydra-core==1.3.2
 idna==3.7
@@ -90,10 +90,10 @@ lensfun==0.3.4
 libfdt==1.7.0
 libtorrent==2.0.10
 lightning-utilities==0.11.2
-lit==18.1.6
+lit==18.1.7
 lxml==5.2.2
 lxml_html_clean==0.1.1
-marisa-trie==1.1.1
+marisa-trie==1.2.0
 Markdown==3.6
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
@@ -128,14 +128,15 @@ nvidia-nvjitlink-cu12==12.5.40
 nvidia-nvtx-cu12==12.5.39
 omegaconf==2.4.0.dev3
 optimum==1.20.0
-packaging==24.0
+packaging==24.1
 pacman_mirrors==4.24.0
 pandas==2.2.2
 pbkdf2==1.3
 pdftotext==2.2.2
 peft==0.11.1
 pillow==10.3.0
-pinecone-client==4.1.0
+pinecone-client==4.1.1
+pinecone-plugin-interface==0.0.7
 pip-review==1.3.0
 platformdirs==4.2.2
 plumbum==1.8.3
@@ -143,7 +144,7 @@ ply==3.11
 preshed==3.0.9
 pretty-errors==1.2.25
 prettytable==3.10.0
-protobuf==5.27.0
+protobuf==5.27.1
 psutil==5.9.8
 py7zr==0.21.0
 pyaes==1.6.1
@@ -190,7 +191,7 @@ QtPy==2.4.1
 regex==2024.5.15
 reportlab==4.2.0
 requests==2.32.3
-responses==0.25.0
+responses==0.25.2
 rich==13.7.1
 rpyc==6.0.0
 rsa==4.9
@@ -199,7 +200,7 @@ safetensors==0.4.3
 scikit-learn==1.5.0
 scipy==1.13.1
 sentencepiece==0.2.0
-sentry-sdk==2.3.1
+sentry-sdk==2.5.1
 setproctitle==1.3.3
 setuptools==70.0.0
 sgmllib3k==1.0.0
@@ -208,10 +209,10 @@ shiboken6==6.7.1
 shiboken6-generator==6.7.1
 shtab==1.7.1
 six==1.16.0
-small-text==1.3.3
+small-text==1.4.0
 smart-open==7.0.4
 smbus==1.1.post2
-smmap==6.0.0
+smmap==5.0.1
 snowballstemmer==2.2.0
 soupsieve==2.5
 spacy==4.0.0.dev3
@@ -232,25 +233,25 @@ texttable==1.7.0
 thinc==9.0.0
 threadpoolctl==3.5.0
 tokenizers==0.19.1
-torch==2.3.0
+torch==2.3.1
 torch-nested==0.0.5
 torchmetrics==1.4.0.post0
-torchvision==0.18.0
+torchvision==0.18.1
 tqdm==4.66.4
 transformers==4.41.2
 triton==2.3.1
-trl==0.8.6
+trl==0.9.4
 typer==0.12.3
 typer-cli==0.12.3
 typer-slim==0.12.3
-typing_extensions==4.12.1
+typing_extensions==4.12.2
 tyro==0.8.4
 tzdata==2024.1
 udiskie==2.5.3
 unrardll==0.1.7
 urllib3==2.2.1
 vboxapi==1.0
-wandb==0.17.0
+wandb==0.17.1
 wasabi==1.1.3
 wcwidth==0.2.13
 weasel==0.4.1
@@ -261,5 +262,5 @@ wrapt==1.16.0
 xxhash==3.4.1
 yarl==1.9.4
 zeroconf==0.132.2
-zipp==3.19.1
+zipp==3.19.2
 zstandard==0.22.0
