--- a/requirements.txt
+++ b/requirements.txt
@@ -9,16 +9,16 @@ annotated-types==0.7.0
 antlr4-python3-runtime==4.13.1
 appdirs==1.4.4
 application-utility==1.3.2
-apsw==3.46.0.0
+apsw==3.46.0.1
 async-timeout==4.0.3
 attrs==23.2.1.dev0
-awscli==1.33.9
+awscli==1.33.11
 Babel==2.15.0
 beautifulsoup4==4.13.0b2
 bitarray==2.9.2
 bitstring==4.2.3
 blis==0.9.1
-botocore==1.34.127
+botocore==1.34.129
 Brotli==1.1.0
 brotlicffi==1.1.0.0
 btchip-python==0.1.32
@@ -56,7 +56,7 @@ evaluate==0.4.2
 faust-cchardet==2.1.19
 feedparser==6.0.11
 filelock==3.15.1
-flake8==7.0.0
+flake8==7.1.0
 fonttools==4.53.0
 frozenlist==1.4.1
 fsspec==2024.6.0
@@ -113,7 +113,7 @@ networkx==3.3
 nftables==0.1
 nltk==3.8.1
 npyscreen==4.10.5
-numpy==2.0.0rc1
+numpy==2.0.0
 nvidia-cublas-cu12==12.5.2.13
 nvidia-cuda-cupti-cu12==12.5.39
 nvidia-cuda-nvrtc-cu12==12.5.40
@@ -154,7 +154,7 @@ pyasn1==0.6.0
 pybcj==1.0.2
 pycairo==1.26.0
 pychm==0.8.6
-pycodestyle==2.11.1
+pycodestyle==2.12.0
 pycparser==2.22
 pycryptodome==3.20.0
 pycryptodomex==3.20.0
@@ -249,9 +249,9 @@ tyro==0.8.4
 tzdata==2024.1
 udiskie==2.5.3
 unrardll==0.1.7
-urllib3==2.2.1
+urllib3==2.2.2
 vboxapi==1.0
-wandb==0.17.1
+wandb==0.17.2
 wasabi==1.1.3
 wcwidth==0.2.13
 weasel==0.4.1
