--- a/requirements.txt
+++ b/requirements.txt
@@ -12,13 +12,13 @@ application-utility==1.3.2
 apsw==3.46.0.1
 async-timeout==4.0.3
 attrs==23.2.1.dev0
-awscli==1.33.11
+awscli==1.33.13
 Babel==2.15.0
 beautifulsoup4==4.13.0b2
 bitarray==2.9.2
 bitstring==4.2.3
 blis==0.9.1
-botocore==1.34.129
+botocore==1.34.131
 Brotli==1.1.0
 brotlicffi==1.1.0.0
 btchip-python==0.1.32
@@ -30,7 +30,7 @@ chardet==5.2.0
 charset-normalizer==3.3.2
 click==8.1.7
 cloudpathlib==0.18.1
-cmake==3.29.5.1
+cmake==3.29.6
 colorama==0.4.6
 coloredlogs==15.0.1
 confection==0.1.5
@@ -55,7 +55,7 @@ Electrum==4.5.4
 evaluate==0.4.2
 faust-cchardet==2.1.19
 feedparser==6.0.11
-filelock==3.15.1
+filelock==3.15.3
 flake8==7.1.0
 fonttools==4.53.0
 frozenlist==1.4.1
@@ -73,7 +73,7 @@ hydra-core==1.3.2
 idna==3.7
 ifaddr==0.2.0
 imagesize==1.4.1
-importlib_metadata==7.1.0
+importlib_metadata==7.2.0
 inflate64==1.0.0
 jeepney==0.8.0
 Jinja2==3.1.4
@@ -81,7 +81,7 @@ jmespath==1.0.1
 joblib==1.4.2
 jsonpatch==1.33
 jsonpointer==3.0.0
-jsonrpclib-pelix==0.4.3.2
+jsonrpclib-pelix==0.4.3.3
 keyutils==0.6
 kiwisolver==1.4.5
 langcodes==3.4.0
@@ -123,13 +123,13 @@ nvidia-cufft-cu12==11.2.3.18
 nvidia-curand-cu12==10.3.6.39
 nvidia-cusolver-cu12==11.6.2.40
 nvidia-cusparse-cu12==12.4.1.24
-nvidia-nccl-cu12==2.21.5
+nvidia-nccl-cu12==2.22.3
 nvidia-nvjitlink-cu12==12.5.40
 nvidia-nvtx-cu12==12.5.39
 omegaconf==2.4.0.dev3
 optimum==1.20.0
 packaging==24.1
-pacman_mirrors==4.24.0
+pacman_mirrors==4.25.0
 pandas==2.2.2
 pbkdf2==1.3
 pdftotext==2.2.2
@@ -145,14 +145,14 @@ preshed==3.0.9
 pretty-errors==1.2.25
 prettytable==3.10.0
 protobuf==5.27.1
-psutil==5.9.8
+psutil==6.0.0
 py7zr==0.21.0
 pyaes==1.6.1
 pyarrow==16.1.0
 pyarrow-hotfix==0.6
 pyasn1==0.6.0
 pybcj==1.0.2
-pycairo==1.26.0
+pycairo==1.26.1
 pychm==0.8.6
 pycodestyle==2.12.0
 pycparser==2.22
@@ -173,7 +173,9 @@ PyQt5_sip==12.13.0
 PyQt6==6.7.0
 PyQt6-WebEngine==6.7.0
 PyQt6_sip==13.6.0
-PySide6==6.7.1
+PySide6==6.7.2
+PySide6_Addons==6.7.2
+PySide6_Essentials==6.7.2
 pysmbc==1.0.25.1
 PySocks==1.7.1
 python-dateutil==2.9.0.post0
@@ -200,13 +202,13 @@ safetensors==0.4.3
 scikit-learn==1.5.0
 scipy==1.13.1
 sentencepiece==0.2.0
-sentry-sdk==2.5.1
+sentry-sdk==2.6.0
 setproctitle==1.3.3
-setuptools==70.0.0
+setuptools==70.1.0
 sgmllib3k==1.0.0
 shellingham==1.5.4
-shiboken6==6.7.1
-shiboken6-generator==6.7.1
+shiboken6==6.7.2
+shiboken6_generator==6.7.2
 shtab==1.7.1
 six==1.16.0
 small-text==1.4.0
@@ -228,7 +230,7 @@ sphinxcontrib-serializinghtml==1.1.10
 srsly==2.4.8
 sympy==1.12.1
 systemd-python==235
-tbb==2021.12.0
+tbb==2021.13.0
 texttable==1.7.0
 thinc==9.0.0
 threadpoolctl==3.5.0
