--- a/requirements.txt
+++ b/requirements.txt
@@ -12,13 +12,13 @@ application-utility==1.3.2
 apsw==3.46.0.1
 async-timeout==4.0.3
 attrs==23.2.1.dev0
-awscli==1.33.13
+awscli==1.33.16
 Babel==2.15.0
 beautifulsoup4==4.13.0b2
 bitarray==2.9.2
 bitstring==4.2.3
 blis==0.9.1
-botocore==1.34.131
+botocore==1.34.134
 Brotli==1.1.0
 brotlicffi==1.1.0.0
 btchip-python==0.1.32
@@ -73,7 +73,7 @@ hydra-core==1.3.2
 idna==3.7
 ifaddr==0.2.0
 imagesize==1.4.1
-importlib_metadata==7.2.1
+importlib_metadata==8.0.0
 inflate64==1.0.0
 jeepney==0.8.0
 Jinja2==3.1.4
@@ -89,8 +89,8 @@ language_data==1.2.0
 lensfun==0.3.4
 libfdt==1.7.0
 libtorrent==2.0.10
-lightning-utilities==0.11.2
-lit==18.1.7
+lightning-utilities==0.11.3.post0
+lit==18.1.8
 lxml==5.2.2
 lxml_html_clean==0.1.1
 marisa-trie==1.2.0
@@ -144,7 +144,7 @@ ply==3.11
 preshed==3.0.9
 pretty-errors==1.2.25
 prettytable==3.10.0
-protobuf==5.27.1
+protobuf==5.27.2
 psutil==6.0.0
 py7zr==0.21.0
 pyaes==1.6.1
@@ -161,7 +161,7 @@ pycryptodomex==3.20.0
 pycups==2.0.4
 pycurl==7.45.3
 pydantic==2.7.4
-pydantic_core==2.19.0
+pydantic_core==2.20.0
 pyflakes==3.2.0
 Pygments==2.18.0
 PyGObject==3.48.2
@@ -180,7 +180,7 @@ pysmbc==1.0.25.1
 PySocks==1.7.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
-python-socks==2.4.4
+python-socks==2.5.0
 pytorch-lightning==2.3.0
 pytorch-triton==0.0.1
 pytz==2024.1
@@ -191,20 +191,20 @@ QDarkStyle==3.2.3
 qrcode==7.4.2
 QtPy==2.4.1
 regex==2024.5.15
-reportlab==4.2.0
+reportlab==4.2.2
 requests==2.32.3
 responses==0.25.3
 rich==13.7.1
 rpyc==6.0.0
 rsa==4.9
-s3transfer==0.10.1
+s3transfer==0.10.2
 safetensors==0.4.3
 scikit-learn==1.5.0
-scipy==1.13.1
+scipy==1.14.0
 sentencepiece==0.2.0
-sentry-sdk==2.6.0
+sentry-sdk==2.7.0
 setproctitle==1.3.3
-setuptools==70.1.0
+setuptools==70.1.1
 sgmllib3k==1.0.0
 shellingham==1.5.4
 shiboken6==6.7.2
@@ -247,13 +247,13 @@ typer==0.12.3
 typer-cli==0.12.3
 typer-slim==0.12.3
 typing_extensions==4.12.2
-tyro==0.8.4
+tyro==0.8.5
 tzdata==2024.1
 udiskie==2.5.3
 unrardll==0.1.7
 urllib3==2.2.2
 vboxapi==1.0
-wandb==0.17.2
+wandb==0.17.3
 wasabi==1.1.3
 wcwidth==0.2.13
 weasel==0.4.1
