--- a/requirements.txt
+++ b/requirements.txt
@@ -12,17 +12,18 @@ application-utility==1.3.2
 apsw==3.46.0.1
 async-timeout==4.0.3
 attrs==23.2.1.dev0
-awscli==1.33.18
+autocommand==2.2.2
+awscli==1.33.19
 Babel==2.15.0
 beautifulsoup4==4.13.0b2
 bitarray==2.9.2
 bitstring==4.2.3
 blis==0.9.1
-botocore==1.34.136
+botocore==1.34.137
 Brotli==1.1.0
 brotlicffi==1.1.0.0
 btchip-python==0.1.32
-btrfsutil==6.9
+btrfsutil==6.9.2
 catalogue==2.0.10
 certifi==2024.6.2
 cffi==1.16.0
@@ -53,6 +54,7 @@ docutils==0.21.2
 ecdsa==0.19.0
 Electrum==4.5.4
 evaluate==0.4.2
+fastjsonschema==2.20.0
 faust-cchardet==2.1.19
 feedparser==6.0.11
 filelock==3.15.4
@@ -75,6 +77,10 @@ ifaddr==0.2.0
 imagesize==1.4.1
 importlib_metadata==8.0.0
 inflate64==1.0.0
+inflect==7.3.1
+jaraco.context==5.3.0
+jaraco.functools==4.0.1
+jaraco.text==3.12.1
 jeepney==0.8.0
 Jinja2==3.1.4
 jmespath==1.0.1
@@ -101,6 +107,7 @@ matplotlib==3.9.0
 mccabe==0.7.0
 mdurl==0.1.2
 mechanize==0.4.10
+more-itertools==10.3.0
 mpmath==1.3.0
 msgpack==1.0.8
 multidict==6.0.5
@@ -114,27 +121,28 @@ nftables==0.1
 nltk==3.8.1
 npyscreen==4.10.5
 numpy==2.0.0
-nvidia-cublas-cu12==12.5.2.13
-nvidia-cuda-cupti-cu12==12.5.39
-nvidia-cuda-nvrtc-cu12==12.5.40
-nvidia-cuda-runtime-cu12==12.5.39
+nvidia-cublas-cu12==12.5.3.2
+nvidia-cuda-cupti-cu12==12.5.82
+nvidia-cuda-nvrtc-cu12==12.5.82
+nvidia-cuda-runtime-cu12==12.5.82
 nvidia-cudnn-cu12==9.1.1.17
-nvidia-cufft-cu12==11.2.3.18
-nvidia-curand-cu12==10.3.6.39
-nvidia-cusolver-cu12==11.6.2.40
-nvidia-cusparse-cu12==12.4.1.24
+nvidia-cufft-cu12==11.2.3.61
+nvidia-curand-cu12==10.3.6.82
+nvidia-cusolver-cu12==11.6.3.83
+nvidia-cusparse-cu12==12.5.1.3
 nvidia-nccl-cu12==2.22.3
-nvidia-nvjitlink-cu12==12.5.40
-nvidia-nvtx-cu12==12.5.39
+nvidia-nvjitlink-cu12==12.5.82
+nvidia-nvtx-cu12==12.5.82
 omegaconf==2.4.0.dev3
-optimum==1.20.0
+optimum==1.21.1
+ordered-set==4.1.0
 packaging==24.1
 pacman_mirrors==4.25.0
 pandas==2.2.2
 pbkdf2==1.3
 pdftotext==2.2.2
 peft==0.11.1
-pillow==10.3.0
+pillow==10.4.0
 pinecone-client==4.1.1
 pinecone-plugin-interface==0.0.7
 pip-review==1.3.0
@@ -146,7 +154,7 @@ pretty-errors==1.2.25
 prettytable==3.10.0
 protobuf==5.27.2
 psutil==6.0.0
-py7zr==0.21.0
+py7zr==0.21.1
 pyaes==1.6.1
 pyarrow==16.1.0
 pyarrow-hotfix==0.6
@@ -160,7 +168,7 @@ pycryptodome==3.20.0
 pycryptodomex==3.20.0
 pycups==2.0.4
 pycurl==7.45.3
-pydantic==2.7.4
+pydantic==2.8.0
 pydantic_core==2.20.0
 pyflakes==3.2.0
 Pygments==2.18.0
@@ -204,7 +212,7 @@ scipy==1.14.0
 sentencepiece==0.2.0
 sentry-sdk==2.7.1
 setproctitle==1.3.3
-setuptools==70.1.1
+setuptools==70.2.0
 sgmllib3k==1.0.0
 shellingham==1.5.4
 shiboken6==6.7.2
@@ -235,6 +243,7 @@ texttable==1.7.0
 thinc==9.0.0
 threadpoolctl==3.5.0
 tokenizers==0.19.1
+tomli==2.0.1
 torch==2.3.1
 torch-nested==0.0.5
 torchmetrics==1.4.0.post0
@@ -243,6 +252,8 @@ tqdm==4.66.4
 transformers==4.42.3
 triton==2.3.1
 trl==0.9.4
+trove-classifiers==2024.7.2
+typeguard==4.3.0
 typer==0.12.3
 typer-cli==0.12.3
 typer-slim==0.12.3
@@ -252,6 +263,7 @@ tzdata==2024.1
 udiskie==2.5.3
 unrardll==0.1.7
 urllib3==2.2.2
+validate-pyproject==0.18
 vboxapi==1.0
 wandb==0.17.3
 wasabi==1.1.3
